@@ -10,10 +10,6 @@ module ActionController
           # Development mode callbacks
           before_dispatch :reload_application
           after_dispatch :cleanup_application
-
-          to_prepare :reload_view_path_cache do
-            ActionView::TemplateFinder.reload! unless ActionView::Base.cache_template_loading
-          end
         end
 
         # Common callbacks
@@ -138,6 +134,7 @@ module ActionController
       run_callbacks :prepare_dispatch
 
       Routing::Routes.reload
+      ActionView::TemplateFinder.reload! unless ActionView::Base.cache_template_loading
     end
 
     # Cleanup the application by clearing out loaded classes so they can
