@@ -99,6 +99,7 @@ module ActionView #:nodoc:
     # return the rendered template as a string.
     def self.register_template_handler(extension, klass)
       @@template_handlers[extension.to_sym] = klass
+      ActionView::TemplateFinder.reload!
     end
 
     def self.template_handler_extensions
