@@ -1,6 +1,6 @@
 *Edge*
 
-* Ensure ActionView::TemplateFinder view cache is rebuilt on initialize [Josh Peek]
+* Make caching more aware of mime types. Ensure request format is not considered while expiring cache.  [Jonathan del Strother]
 
 * Drop ActionController::Base.allow_concurrency flag [Josh Peek]
 
