@@ -1,5 +1,9 @@
 *Edge*
 
+* Add :validate option to associations to enable/disable the automatic validation of associated models. Resolves #301. [Jan De Poorter]
+
+* PostgreSQL: use 'INSERT ... RETURNING id' for 8.2 and later.  [Jeremy Kemper]
+
 * Added SQL escaping for :limit and :offset in MySQL [Jonathan Wiess]
 
 
